--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,19 @@ Django==4.2.27
 
 # Database
 mysqlclient==2.2.7
-
+python-dotenv==1.0.0
+gunicorn==23.0.0
+whitenoise==6.6.0
 # Environment Variables
 python-dotenv==1.2.1
-
+django-storages==1.14.2
 # Image Processing
 Pillow==11.3.0
+google-api-core==2.28.1
+google-auth==2.45.0
+google-cloud-core==2.5.0
+google-cloud-storage==2.18.1
+google-crc32c==1.8.0
+google-resumable-media==2.8.0
+googleapis-common-protos==1.72.0
+dj-database-url==3.0.1
